# RuTorrent

./: .gitignore  Cargo.toml  LICENSE  README.md  release_notes.md
.github/workflows/: rust.yml
src/: api.rs  background.rs  constant.rs  database.rs  db.rs  lib.rs  logger.rs  main.rs  ntfy.rs  parser.rs  qb.rs  rsync.rs  savepath.rs  settings.rs  squire.rs  swagger.rs  telegram.rs
