[package]
name = "rutorrent"
version = "0.0.3"
description = "RuTorrent is a light-weight proxy API to download magnet links and transfer content to remote servers."
license = "MIT"
documentation = "https://docs.rs/rutorrent"
homepage = "https://github.com/thevickypedia/rutorrent"
repository = "https://github.com/thevickypedia/rutorrent"
rust-version = "1.95.0"
keywords = ["rutorrent", "qbittorrent", "asynchronous-server"]
categories = ["web-programming::http-server", "asynchronous"]
include = ["/src", "LICENSE"]
exclude = [".github", ".gitignore", "README.md"]
edition = "2024"
authors = ["Vignesh Rao"]

[lib]
name = "rutorrent"
path = "src/lib.rs"

[[bin]]
name = "rutorrent"
path = "src/main.rs"

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
actix-web = "4.13.0"
reqwest = { version = "0.13.3", features = ["blocking", "cookies", "json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
actix-rt = "2.11.0"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "fs"] }
env_logger = "0.11.10"
chrono = "0.4.44"
log = "0.4.29"
uuid = { version = "1.23.1", features = ["v4"] }
dotenv = "0.15.0"
url = "2.5.8"
